--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <div class="footer-contact">
             <h4><strong>PRATAP K. KAPOOR</strong></h4>
             <p>Mobile: 9960562507 / 9552005300</p>
-            <p>E-Mail: kapor.pkk.prtap727@gmail.com</p>
+            <p>Email Id: <a href="mailto:kapor.pkk.prtap727@gmail.com">kapor.pkk.prtap727@gmail.com</a></p>
             <p>Prabhukosh, 13–B, Uday Housing Society,<br>Savedi, Ahmednagar – 414003,<br>Maharashtra</p>
         </div>
     </div>
