--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         </div>
                         <div class="form-group">
                             <label for="contact-number">Contact Number <span class="required">*</span></label>
-                            <input type="text" id="contact-number" name="contact-number" required>
+                            <input type="tel" id="contact-number" name="contact-number" pattern="[0-9]*" required>
                         </div>
                         <div class="form-group">
                             <label for="message">Enquiry or Message <span class="required">*</span></label>
