--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         <div class="footer-contact">
             <h4><strong>PRATAP K. KAPOOR</strong></h4>
             <p>Mobile: 9960562507 / 9552005300</p>
-            <p>Email: <a href="mailto:kapoor.pkk.prtap727@gmail.com">kapoor.pkk.prtap727@gmail.com</a></p>
+            <p>Email: <a href="mailto:kapoor.pkk.pratap727@gmail.com">kapoor.pkk.pratap727@gmail.com</a></p>
             <p>Prabhukosh, 13–B, Uday Housing Society,<br>Savedi, Ahilyanagar – 414003,<br>Maharashtra</p>
         </div>
     </div>
