--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#About">About Us</a></li>
+                    <li><a class="nav-link scrollto" href="#WhoWeAre">About Us</a></li>
                     <li><a class="nav-link scrollto" href="#our-expertise">Services</a></li>
                     <li><a class="nav-link scrollto" href="#get-in-touch">Contact Us</a></li>
                 </ul>
