--- a/index.html
+++ b/index.html
@@ -497,9 +497,9 @@
             console.log(body);
 
             Email.send({
-                SecureToken: "da5feedd-dddb-41a4-877b-c92613d85f21",
-                To: 'pratapkapoor54@gmail.com',
-                From: "pratapkapoor54@gmail.com",
+                secureToken: "7becb279-d96e-4bf5-b9b5-da02ff382921",
+                To: 'kapoor.pkk.pratap727@gmail.com',
+                From: "kapoor.pkk.pratap727@gmail.com",
                 Subject: "Inquiry from Website",
                 Body: body,
             }).then(
