Update Given By Client

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <h1>Excellence in <br>Manufacturing and<br>Operations</h1>
                     </div>
 
-                    <h2>35+ Years of Experience in Strategic Planning and Process Excellence.</h2>
+                    <h2>35+ Years of Experience in Plant Management, Strategic Planning, and Process Excellence.</h2>
                     <div class="d-flex">
                         <a href="#our-expertise" class="btn-get-started scrollto" >Explore Our Services</a><span></span>
                         <a href="#get-in-touch"  class="btn-secondary scrollto" >Contact Us</a>
@@ -99,7 +99,7 @@
         <section id="WhoWeArePara" class="WhoWeArePara">
             <div class="container">
                 <div">
-                <p>With over 35 years of professional experience in plant operations, we specialize in setting up new seamless tube plants, solving teething problems, and enhancing productivity. Our expertise lies in optimizing resources, enhancing production processes, and driving operational efficiencies. As leaders in manufacturing operations, quality assurance, and process excellence, we are committed to improving operational performance and ensuring the highest standards in every aspect of our work.
+                <p>With over 35 years of professional experience in plant operations, we specialize in setting up new seamless tube plants, solving teething problems, yield improvement, and improving productivity. Our expertise lies in optimizing resources, enhancing production processes, and driving operational efficiencies. As leaders in manufacturing operations, quality assurance, and process excellence, we are committed to improving operational performance and ensuring the highest standards in every aspect of our work.
                 </p></div>
                 </div>
             </div>
@@ -297,8 +297,9 @@
     <section class="key-achievements">
         <div class="container">
             <h2>Key Achievements</h2>
+            <p><strong>CEO Mr. Pratap K Kapoor has served as the Plant Head at these esteemed organizations.</strong></p>
             <div class="accordion">
-                <div class="accordion-item">
+                <!-- <div class="accordion-item">
                     <button class="accordion-button" onclick="toggleAccordion('achievement1', this)">
                         Micro Turners Group – Seamless Tube Division
                     </button>
@@ -308,6 +309,18 @@
                         <p><strong>Reduced Downtime:</strong> Successfully reduced overall downtime from 51% to 38%, optimizing production efficiency.</p>
                         <p><strong>Improved Yield:</strong> Boosted yield from 65% to 71%, with a target of 78% achieved by September 2014.</p>
                         <p><strong>Reintroduced Training Programs:</strong> Revitalized the Training and Development activity across all categories, ensuring continuous skill enhancement.</p>
+                    </div>
+                </div> -->
+
+                <div class="accordion-item">
+                    <button class="accordion-button" onclick="toggleAccordion('achievement1', this)">
+                        Micro Seamless (Micro Turner Group)
+                    </button>
+                    <div id="achievement1" class="accordion-content">
+                        <p><strong>Piercer downtime reduced </strong> from 50% to 36%.</p>
+                        <p><strong>Yield improvement </strong> by 5%, in all categories.</p>
+                        <p><strong>Dispatch improvement </strong> from 90 MT to 160 MT per month.</p>
+                        <p><strong>Suggested use of Sulphuric acid </strong> instead of Hydrochloric acid, for pickling/phosphating activity.</p>
                     </div>
                 </div>
 
@@ -328,7 +341,7 @@
 
                 <div class="accordion-item">
                     <button class="accordion-button" onclick="toggleAccordion('achievement3', this)">
-                        Remi Metals Gujarat Ltd. – Seamless Pipe Plant
+                        Remi Metals Gujarat Ltd. Welspun – Seamless Pipe Plant
                         </span>
                     </button>
                     <div id="achievement3" class="accordion-content">
@@ -359,7 +372,11 @@
                         </span>
                     </button>
                     <div id="achievement5" class="accordion-content">
-                        <p><strong>Rapid Production Growth:</strong> Within 5 months, Pilger’s production grew from 80,000 meters per month to 150,000 meters, with dispatch rates also increasing significantly.</p>
+                        <p><strong>Increased Pilger's production</strong> from 80,000 meters per month to 150,000 meters per month within 5 months.</p>
+                        <p><strong>Monthly dispatches of SS seamless tubes</strong> increased from 90 MT to 150 MT within 4-5 months.</p>
+                        <p><strong>Overall downtime reduced</strong> to 38% from 51%.</p>
+                        <p><strong>Yield improved</strong> from 65% to 71%, with a target of 78% achieved by September 2014.</p>
+                        <p><strong>Re-started Training and Development activities</strong> for all categories.</p>
                     </div>
                 </div>
             </div>
@@ -446,12 +463,12 @@
     <div class="container">
         <div class="footer-logo">
             <img src="KP Logo.svg" alt="Company Logo">
-            <p>We are a group of Corporate Executives with specialization in Marketing, Business Development, Demand Generation, Customer Services, HR, and Finance.</p>
+            <p>We are a group of Corporate Executives with specialization in Setting up New Plants, Business Development, Demand Generation, Customer Services, HR, and Sourcing.</p>
         </div>
         <div class="footer-links">
             <h4><strong>Useful Links</strong></h4>
             <ul>
-                <li><a href="#About">About Us</a></li>
+                <li><a href="#WhoWeAre">About Us</a></li>
                 <li><a href="#our-expertise">Services</a></li>
                 <li><a href="#get-in-touch">Contact Us</a></li>
             </ul>
