--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             console.log(body);
 
             Email.send({
-                secureToken: "7becb279-d96e-4bf5-b9b5-da02ff382921",
+                SecureToken: "7becb279-d96e-4bf5-b9b5-da02ff382921",
                 To: 'kapoor.pkk.pratap727@gmail.com',
                 From: "kapoor.pkk.pratap727@gmail.com",
                 Subject: "Inquiry from Website",
