--- a/index.html
+++ b/index.html
@@ -172,9 +172,64 @@
                 </div>
             </div> -->
 
-            </div>
-        </section>
+            <!-- </div>
+        </section> -->
         <!-- End Featured Services Section -->
+
+
+
+
+        <!-- Our Clients -->
+
+        <section id="client" class="client">
+            <div class="container">
+
+                <div  class="row">
+                    <div class="Our Clients Heading">
+                        <div class="icon-box-1">
+                            <h2 class="title-1">Our Clients</h2> 
+                            <p class="description-1">Here are just a few of our top clients, and we're proud to serve many more across various industries.Here are just a few of our top clients, and we're proud to serve many more across various industries.</p>
+                        </div>
+                    </div> 
+
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+                        <div class="icon-box">
+                            <!-- <div class="icon"><img src="./3.svg"></div> -->
+                            <h4 class="title"><a>Triveni Sangam Udyog</a></h4>
+                            <p class="description">Ahilyanagar</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+                        <div class="icon-box">
+                            <!-- <div class="icon"><img src="./4.svg"></div> -->
+                            <h4 class="title"><a>Trishakti Industries (Seamless)</a></h4>
+                            <p class="description">Orissa</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+                        <div class="icon-box">
+                            <!-- <div class="icon"><img src="./5.svg"></div> -->
+                            <h4 class="title"><a>Thruwell Technology Pvt Ltd</a></h4>
+                            <p class="description">Mumbai</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+                        <div class="icon-box">
+                            <!-- <div class="icon"><img src="./6.svg"></div> -->
+                            <h4 class="title"><a>Suraj Tubes</a></h4><br>
+                            <p class="description">Ahmadabad</p>
+                        </div>
+                        
+                    </div> 
+                </div>
+            </div> 
+
+            <!-- </div>
+        </section> -->
+
+
+
             <br><br>
 
 
