--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
             <h1 class="logo">
                 <a href="index.html"><img style="width:auto;" src="KP Logo.svg"></a>
+                <p>Where Solution Flow Seamlessly...</p>
             </h1>
 
             <nav id="navbar" class="navbar">
